@@ -15,6 +15,9 @@ import com.example.orderservice.response.*;
 import com.example.orderservice.service.inteface.OrderService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -42,49 +45,60 @@ public class OrderServiceImpl implements OrderService {
     @Override
     @Transactional
     public OrderResponse createOrder(Long cartId, Long addressId, PaymentMethod paymentMethod, String voucherCode) {
-
         Cart cart = cartRepository.findById(cartId)
                 .orElseThrow(() -> new AppException(ErrorCode.CART_NOT_FOUND));
+
+        if (cart.getItems() == null || cart.getItems().isEmpty()) {
+            throw new AppException(ErrorCode.CART_EMPTY);
+        }
 
         if (paymentMethod == null) {
             throw new AppException(ErrorCode.INVALID_PAYMENT_METHOD);
         }
 
-        Order order = buildOrder(cart, addressId );
-        orderRepository.save(order);
+        Order order = buildOrder(cart, addressId);
+        order = orderRepository.save(order);
 
-        List<CartItem> cartItems = cartItemRepository.findByCartId(cart.getId());
-        List<OrderDetail> details = cartItems.stream()
-                .map(item -> OrderDetail.builder()
-                        .productId(item.getProductId())
-                        .quantity(item.getQuantity())
-                        .price(item.getPrice())
-                        .order(order)
-                        .build()
-                ).toList();
+        List<OrderDetail> details = createOrderItemsFromCart(cart, order);
+        orderDetailRepository.saveAll(details);
 
         order.setOrderDetails(details);
-        orderDetailRepository.saveAll(details);
+        orderRepository.save(order);
 
         ProcessOrder process = new ProcessOrder();
         process.setOrder(order);
         process.setStatus(EnumProcessOrder.PENDING);
         process.setCreatedAt(new Date());
+        processOrderRepository.save(process);
 
         order.setProcessOrders(List.of(process));
-        processOrderRepository.save(process);
+        orderRepository.save(order);
 
         Payment payment = Payment.builder()
                 .order(order)
                 .paymentMethod(paymentMethod)
                 .paymentStatus(PaymentStatus.PENDING)
                 .date(new Date())
-                .total(cart.getTotalPrice())
+                .total(order.getTotal())
                 .userId(order.getUserId())
                 .transactionCode(generateTransactionCode())
                 .build();
-
         paymentRepository.save(payment);
+
+        List<CartItem> cartItems = cartItemRepository.findByCartId(cart.getId());
+        if (!cartItems.isEmpty()) {
+            cartItemRepository.deleteAll(cartItems);
+        }
+        cart.getItems().clear();
+        cart.setTotalPrice(0.0);
+        cartRepository.save(cart);
+//
+//        try {
+//            OrderPlacedEvent event = new OrderPlacedEvent(order.getId(), order.getUserId(), order.getTotal());
+//            kafkaTemplate.send("order-placed", event);
+//        } catch (Exception ex) {
+//            ex.printStackTrace();
+//        }
 
         return mapToResponse(order);
     }
@@ -97,6 +111,7 @@ public class OrderServiceImpl implements OrderService {
     }
 
     @Override
+    @Transactional
     public OrderResponse updateOrderStatus(Long orderId, EnumProcessOrder status) {
         Order order = orderRepository.findByIdAndIsDeletedFalse(orderId)
                 .orElseThrow(() ->  new AppException(ErrorCode.ORDER_NOT_FOUND));
@@ -106,10 +121,84 @@ public class OrderServiceImpl implements OrderService {
         process.setStatus(status);
         process.setCreatedAt(new Date());
 
-        order.getProcessOrders().add(process);
         processOrderRepository.save(process);
 
+         if (order.getProcessOrders() == null) {
+            order.setProcessOrders(List.of(process));
+        } else {
+            order.getProcessOrders().add(process);
+        }
+        orderRepository.save(order);
+
         return mapToResponse(order);
+    }
+
+    @Override
+    public PageResponse<OrderResponse> searchOrderByCustomer(String request, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        String userId = getUserId();
+
+        Page<Order> orders = orderRepository.searchByUserIdAndKeyword(userId, request, pageable);
+
+        List<OrderResponse> responses = orders.getContent()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
+
+        return new PageResponse<>(
+                responses,
+                orders.getNumber(),
+                orders.getSize(),
+                orders.getTotalElements(),
+                orders.getTotalPages(),
+                orders.isFirst(),
+                orders.isLast()
+        );
+    }
+
+    @Override
+    public PageResponse<OrderResponse> searchOrder(String request, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+
+        Page<Order> orders = orderRepository.searchByKeywordNative(request, pageable);
+
+        List<OrderResponse> responses = orders.getContent()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
+
+        return new PageResponse<>(
+                responses,
+                orders.getNumber(),
+                orders.getSize(),
+                orders.getTotalElements(),
+                orders.getTotalPages(),
+                orders.isFirst(),
+                orders.isLast()
+        );
+    }
+
+    @Override
+    public PageResponse<OrderResponse> searchOrderByStoreId(String request, int page, int size, String storeId) {
+        Pageable pageable = PageRequest.of(page, size);
+        String id = getStoreById(storeId);
+
+        Page<Order> orders = orderRepository.searchByStoreIdAndKeyword(id, request, pageable);
+
+        List<OrderResponse> responses = orders.getContent()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
+
+        return new PageResponse<>(
+                responses,
+                orders.getNumber(),
+                orders.getSize(),
+                orders.getTotalElements(),
+                orders.getTotalPages(),
+                orders.isFirst(),
+                orders.isLast()
+        );
     }
 
     private OrderResponse mapToResponse(Order order) {
@@ -129,9 +218,8 @@ public class OrderServiceImpl implements OrderService {
 
         return OrderResponse.builder()
                 .id(order.getId())
-                .user(getUser(order.getUserId()))
-//                .store(getStore(order.getStoreId() != null ? order.getStoreId() : null ))
-                .address(getAddress(order.getAddressId()))
+                .user(safeGetUser(order.getUserId()))
+                .address(safeGetAddress(order.getAddressId()))
                 .total(order.getTotal())
                 .note(order.getNote())
                 .orderDate(order.getOrderDate())
@@ -144,7 +232,7 @@ public class OrderServiceImpl implements OrderService {
                                         .quantity(detail.getQuantity())
                                         .price(detail.getPrice())
                                         .build())
-                                .toList()
+                                .collect(Collectors.toList())
                                 : List.of()
                 )
                 .processOrders(
@@ -155,7 +243,7 @@ public class OrderServiceImpl implements OrderService {
                                         .status(process.getStatus())
                                         .createdAt(process.getCreatedAt())
                                         .build())
-                                .toList()
+                                .collect(Collectors.toList())
                                 : List.of()
                 )
                 .payment(paymentResponse)
@@ -163,24 +251,33 @@ public class OrderServiceImpl implements OrderService {
     }
 
     private Order buildOrder(Cart cart, Long addressId) {
-        return Order.builder()
-                .total(cart.getTotalPrice())
+        Double total = cart.getTotalPrice();
+        if (total == null) {
+            total = cart.getItems().stream()
+                    .mapToDouble(item -> item.getPrice() * item.getQuantity())
+                    .sum();
+        }
+
+        Order order = Order.builder()
+                .total(total)
                 .userId(getUserId())
                 .addressId(getAddressById(addressId))
                 .orderDate(new Date())
                 .build();
+        return order;
     }
 
     private List<OrderDetail> createOrderItemsFromCart(Cart cart, Order order) {
         return cart.getItems().stream()
                 .map(cartItem -> {
-                    OrderDetail orderItem = new OrderDetail();
-                    orderItem.setOrder(order);
-                    orderItem.setProductId(cartItem.getProductId());
-                    orderItem.setQuantity(cartItem.getQuantity());
-                    orderItem.setPrice(cartItem.getPrice());
-                    orderItem.setPrice(cartItem.getPrice() * cartItem.getQuantity());
-                    return orderItem;
+                    OrderDetail detail = OrderDetail.builder()
+                            .order(order)
+                            .productId(cartItem.getProductId())
+                            .quantity(cartItem.getQuantity())
+                            .price(cartItem.getPrice())
+                            .build();
+
+                    return detail;
                 })
                 .collect(Collectors.toList());
     }
@@ -199,7 +296,10 @@ public class OrderServiceImpl implements OrderService {
             throw new AppException(ErrorCode.NOT_FOUND_USER);
         }
         ApiResponse<UserResponse> userId = userClient.getUserByAccountId(response.getData().getId());
-        return userId.getData().getId() ;
+        if (userId == null || userId.getData() == null) {
+            throw new AppException(ErrorCode.NOT_FOUND_USER);
+        }
+        return userId.getData().getId();
     }
 
     private Long getAddressById(Long addressId) {
@@ -210,6 +310,24 @@ public class OrderServiceImpl implements OrderService {
         return response.getData().getId();
     }
 
+    private String generateTransactionCode() {
+        return "TXN-" + System.currentTimeMillis() + "-" + (int)(Math.random() * 10000);
+    }
+
+    private UserResponse safeGetUser(String userId) {
+        if (userId == null) return null;
+        ApiResponse<UserResponse> resp = userClient.getUserById(userId);
+        if (resp == null || resp.getData() == null) return null;
+        return resp.getData();
+    }
+
+    private AddressResponse safeGetAddress(Long addressId) {
+        if (addressId == null) return null;
+        ApiResponse<AddressResponse> resp = userClient.getAddressById(addressId);
+        if (resp == null || resp.getData() == null) return null;
+        return resp.getData();
+    }
+
     private String getStoreById(String storeId){
         ApiResponse<StoreResponse> response = storeClient.getStoreById(storeId);
         if (response == null || response.getData() == null) {
@@ -218,19 +336,4 @@ public class OrderServiceImpl implements OrderService {
         return response.getData().getId();
     }
 
-    private String generateTransactionCode() {
-        return "TXN-" + System.currentTimeMillis() + "-" + (int)(Math.random() * 10000);
-    }
-
-    private UserResponse getUser(String userId) {
-        return userClient.getUserById(userId).getData();
-    }
-
-    private AddressResponse getAddress(Long addressId) {
-        return userClient.getAddressById(addressId).getData();
-    }
-
-    private StoreResponse getStore(String storeId) {
-        return storeClient.getStoreById(storeId).getData();
-    }
 }
